--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
   "author": "Csaba Kappel <kappel.csaba@gmail.com> (http://nervatura.com)",
   "license": "LGPL-3.0",
   "homepage": "http://nervatura.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nervatura/nervatura-report.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nervatura/nervatura-report/issues"
+  },
   "main": "dist/report.node.js",
   "module": "dist/report.module.js",
   "browser": "dist/report.browser.js",
